# friday-cli

./: .env  .gitignore  README.md  pyproject.toml
friday/: agent.py  main.py  style.tcss  styles.tcss  test.py  tui.py
scripts/: friday.fish  friday.zsh  run_friday.zsh
src/: __main__.py  main.py  style.tcss
